--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -26,3 +26,6 @@ jobs:
        run: terraform plan
        
        
+     - name: Terraform apply
+       run: terraform apply -auto-approve
+       
